# Comp_graph

./: .gitignore  CMakeLists.txt~  Makefile  README.md  cmake_install.cmake
lab1/: CMakeLists.txt  CMakeLists.txt~  Makefile  cmake_install.cmake  lab1  lab1.c  lab1.c~
lab2/: CMakeLists.txt  CMakeLists.txt~  Makefile  cmake_install.cmake  copy.c  lab2  lab2.c  lab2.c~  old_version.c
lab3/: CMakeLists.txt  CMakeLists.txt~  Makefile  chernovik.c  cmake_install.cmake  cope.c  copy.c  lab3  lab3.c  lab3.c~  pog  pog1.c
lab4/: CMakeLists.txt~  Makefile  Makefile~  cmake_install.cmake  cope.c  coppe.c  copy (copy).c  copy.c  lab4  lab4.c  lab4.c~
lab5/: Makefile  lab5.c
lab6/: lab6  lab6.c  parametrs.h  params.txt
lab7/: lab7.c  results.csv
lab8/: frag_shader_torus.glsl  lab8.c  vert_shader_torus.glsl
